metrics added Website Screenshot

--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -63,3 +63,8 @@ jobs:
           plugin_wakatime: yes
           plugin_wakatime_token: ${{ secrets.WAKATIME_TOKEN }}
           plugin_wakatime_sections: time
+
+          plugin_screenshot: yes
+          plugin_screenshot_background: yes
+          plugin_screenshot_selector: body
+          plugin_screenshot_title: Webseite
