--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -55,10 +55,12 @@ jobs:
           #plugin_repositories_featured: Dodo1213/github-api-wrapper, Dodo1213/gradle-spigot-dependency-loader, Dodo1213/mcserv
           
           plugin_music: yes
-          plugin_music_provider: spotify
-          plugin_music_token: "${{ secrets.SPOTIFY_CLIENT_ID }}, ${{ secrets.SPOTIFY_CLIENT_SECRET }}, ${{ secrets.SPOTIFY_REFRESH_TOKEN }}"
-          plugin_music_mode: recent
           plugin_music_limit: 5
+          plugin_music_mode: top
+          plugin_music_provider: spotify
+          plugin_music_time_range: short
+          plugin_music_top_type: tracks
+          plugin_music_user: .user.login
 
           plugin_wakatime: yes
           plugin_wakatime_token: ${{ secrets.WAKATIME_TOKEN }}
@@ -68,3 +70,4 @@ jobs:
           plugin_screenshot_background: yes
           plugin_screenshot_selector: body
           plugin_screenshot_title: Webseite
+          plugin_screenshot_url: ${{ secrets.WEBSITE }}
