--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -9,6 +9,8 @@ on:
 jobs:
   github-metrics:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
     steps:
       - uses: lowlighter/metrics@latest
         with:
@@ -28,16 +30,21 @@ jobs:
           plugin_activity_limit: 5
           plugin_activity_load: 300
           plugin_activity_visibility: all
+          
           plugin_code: yes
           plugin_code_lines: 12
           plugin_code_load: 100
           plugin_code_visibility: public
+          
           plugin_followup: yes
           plugin_followup_sections: repositories
+          
           plugin_introduction: yes
           plugin_introduction_title: yes
+          
           plugin_isocalendar: yes
           plugin_isocalendar_duration: half-year
+          
           plugin_languages: yes
           plugin_languages_analysis_timeout: 15
           plugin_languages_categories: markup, programming
@@ -48,26 +55,26 @@ jobs:
           plugin_languages_recent_load: 300
           plugin_languages_sections: most-used
           plugin_languages_threshold: 0%
+          
           plugin_lines: yes
           plugin_notable: yes
           plugin_notable_from: organization
           plugin_repositories: yes
           #plugin_repositories_featured: Dodo1213/github-api-wrapper, Dodo1213/gradle-spigot-dependency-loader, Dodo1213/mcserv
-          
-          plugin_music: yes
-          plugin_music_limit: 5
-          plugin_music_mode: top
-          plugin_music_provider: spotify
-          plugin_music_time_range: short
-          plugin_music_top_type: tracks
-          plugin_music_user: .user.login
 
           plugin_wakatime: yes
           plugin_wakatime_token: ${{ secrets.WAKATIME_TOKEN }}
           plugin_wakatime_sections: time
+          
+          plugin_leetcode_limit_recent: 2
+          plugin_leetcode_limit_skills: 10
+          plugin_leetcode_sections: solved
+          plugin_leetcode_user: .user.login
 
           plugin_screenshot: yes
           plugin_screenshot_background: yes
           plugin_screenshot_selector: body
           plugin_screenshot_title: Webseite
           plugin_screenshot_url: ${{ secrets.WEBSITE }}
+          
+          plugin_support: true
